Fix band cards not toggling on iphone by adding onclick to band cards.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,6 +116,7 @@
   /* position: relative; */
   /* top:.4em; */
   height: 6em;
+  max-width: 90%;
 }
 .buttongroup{
   display: flex;
